# yolov5_cv_robot

./: Dockerfile  README.md
src/hubert/: CMakeLists.txt  package.xml
src/hubert/config/: gazebo_params.yaml  rviz.rviz
src/hubert/description/: camera.xacro  gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
src/hubert/launch/: launch_sim.launch.py  rsp.launch.py
src/hubert/worlds/: fslightcards.world
src/navi/: CMakeLists.txt  package.xml
src/navi/config/: mapper_params_localization.yaml  nav2_params.yaml
src/navi/launch/: navigation_launch.py  online_async_launch.py
src/ros2_yolov5/: package.xml  setup.py
src/ros2_yolov5/ros2_yolov5/: inference.py
